# nullcontext-runner

./: AGENTS.md  Cargo.toml  LLAMA_ALLOCATOR_KV_INTROSPECTION_PLAN.md  PRE_WINDOWS_VALIDATION_PLAN.md  README.md  V1_ROADMAP.md  WINDOWS_RUNTIME_VALIDATION.md  runtime_introspection_manifest.example.json
apps/desktop/: pnpm-lock.yaml
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: pnpm-lock.yaml
apps/web/src/: App.css  App.tsx  appSelectors.ts  appTypes.ts  appUtils.ts
apps/web/src/components/: AppSidebar.tsx  ChatWorkspace.tsx  CorpusDrawer.tsx  CorpusReportViewer.tsx  Hint.tsx  InspectorPanel.tsx  ModelRegistryDrawer.tsx  PrivacyReportViewer.tsx  ReportGrid.tsx  SessionConfigDrawer.tsx  SessionRegistryDrawer.tsx
apps/web/src/hooks/: useAppShell.ts  useAppViewModel.ts  useCorpusManager.ts  useModelRegistry.ts  useSessionRegistry.ts  useSessionRunner.ts
src/: audit.rs  chat.rs  cleanup.rs  config.rs  corpus.rs  corpus_registry.rs  cuda_pressure.rs  docs.rs  embed.rs  gpu_inspection.rs  inference.rs  llama_stream.rs  logging.rs  main.rs  memory_scan.rs  memory_validation.rs  process_scan.rs  ram_pressure.rs  registry.rs  retrieval.rs  runtime.rs  runtime_capabilities.rs  runtime_introspection.rs  sensitive.rs  session.rs  validation_harness.rs  validation_history.rs  web.rs
src/audit/: introspection.rs
