[package]
name = "nullcontext-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zeroize = "1"
