[package]
name = "nullcontext-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zeroize = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures-util = "0.3"
walkdir = "2"
lopdf = "0.32"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }
